--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar navbar-expand-lg  fixed-top">
         <div class="container-fluid">
 
-            <div class="logo me-4">
+            <div class="logo ">
 
                 <a class="navbar-brand" href="#">
                     <img width="80" src="asset/image/7.png">
@@ -36,26 +36,26 @@
 
             <div class="collapse navbar-collapse " id="navbarSupportedContent">
 
-                <ul class="navbar-nav me-2 mb-2 mb-lg-0">
-                    <li class="nav-item me-5">
+                <ul class="navbar-nav mb-2 mb-lg-0">
+                    <li class="nav-item ">
                         <a class="nav-link active" href="#">
                             <i class="fas fa-home"></i>
                             الرئيسية
                         </a>
                     </li>
-                    <li class="nav-item me-5">
+                    <li class="nav-item ">
                         <a class="nav-link" href="#">
                             <i class="fas fa-building"></i>
                             خدماتنا
                         </a>
                     </li>
-                    <li class="nav-item me-5">
+                    <li class="nav-item ">
                         <a class="nav-link" href="#footer">
                             <i class="fas fa-phone"></i>
                             تواصل معنا
                         </a>
                     </li>
-                    <li class="nav-item me-5">
+                    <li class="nav-item ">
                         <a class="nav-link" href="#">
                             <i class="fas fa-user"></i>
 
@@ -64,7 +64,7 @@
                         </a>
                     </li>
             
-            <li class="nav-item dropdown me-5">
+            <li class="nav-item dropdown ">
   <a class="nav-link " id="Nav-Link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
     <span id="current-lang">العربية</span>
     <img id="current-flag" src="asset/image/square_16149560.png" alt="" width="20">
